syntax = "proto3";

package ocf.cloud.device.directory.pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/go-ocf/ocf-cloud/resource-directory/pb/device-directory/queries.proto";

option go_package = "github.com/go-ocf/ocf-cloud/resource-directory/pb/device-directory;device-directory";

service DeviceDirectory {
  rpc GetDevices (GetDevicesRequest) returns (stream Device) {}
}